--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
 et_xmlfile==2.0.0
+idna==3.10
+markdown-it-py==4.0.0
+mdurl==0.1.2
 numpy==2.3.2
 openpyxl==3.1.5
 pandas==2.3.1
+Pygments==2.19.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
+requests==2.32.4
+rich==14.1.0
+shellingham==1.5.4
 six==1.17.0
+typer==0.16.0
+typing_extensions==4.14.1
 tzdata==2025.2
+urllib3==2.5.0
+vulture==2.14
+xlrd==2.0.2
